style: update category item styles and images

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,13 +3,13 @@
 @tailwind utilities;
 
 :root {
-  --background: 0 0% 96%;
+  --background:  356 5% 15%;
   --foreground: 0 0% 20%;
   --card: 356 50% 100%;
   --card-foreground: 356 5% 15%;
   --popover: 356 100% 100%;
   --popover-foreground: 356 100% 10%;
-  --primary: 356 83% 51.6%;
+  --primary: 356 5% 15%;
   --primary-foreground: 0 0% 100%;
   --secondary: 356 30% 90%;
   --secondary-foreground: 0 0% 0%;
@@ -55,5 +55,10 @@
 
   body {
     @apply text-foreground antialiased;
+    background-color: #040f18;
   }
+}
+
+.shadow-md {
+  background-color: #848484;
 }
